[package]
name = "dao"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }

deadpool-redis = { version = "0.18.0", features = ["serde"] }
redis = { version = "0.28.2", default-features = false, features = ["tls"] }

serde_json = "1.0"
dotenv = "0.15.0"
once_cell = "1.20.2"

domain = { path = "../domain" }
utils = { path = "../utils" }