[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 引入模块
domain = { path = "../domain" }
dao = { path = "../dao" }
utils = { path = "../utils" }
log = "0.4.22"